--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
-    "build": "npm run build"
+    "build": "react-scripts build"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
+    "react-scripts": "1.0.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
